<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArcPresto</string>
    <string name="action_settings">SETTING</string>
    <string name="OK">OK</string>
    <string name="back">BACK</string>
    <string name="configure">CONFIGURATION</string>
    <string name="menu">MENU</string>
    <string name="table">TABLE</string>
    <string name="sysm_param">SETTING</string>
    <string name="_return">RETURN</string>
    <string name="add">ADD</string>
    <string name="change">REPLACE</string>
    <string name="download">DOWNLOAD</string>
    <string name="update">UPLOAD</string>
    <string name="recycle">RECYCLE</string>
    <string name="variety">TYPE</string>
    <string name="name">NAME</string>
    <string name="description">DESCRIPTION</string>
    <string name="on_sale">ON SALE</string>
    <string name="delete">DELETE</string>
    <string name="order_in_turn">ORDER IN TURN</string>
    <string name="top5">Top5</string>
    <string name="new_plate">NEW</string>
    <string name="chef">RECOMMAND</string>
    <string name="move_up">MOVE UP</string>
    <string name="move_down">MOVE DOWN</string>
    <string name="main_database">MAIN DATABASE</string>
    <string name="address">ADDRESS</string>
    <string name="database">DATABASE</string>
    <string name="username">USENAME</string>
    <string name="password">PASSWARD</string>
    <string name="total_time">TOTAL TIME</string>
    <string name="turn_time">TURN TIME</string>
    <string name="limit_in_turn">LIMIT</string>
    <string name="test">TEST</string>
    <string name="modify_set_meal">MEAL SETTING</string>
    <string name="modify_password">MODIFY PASSWORD</string>
    <string name="printer_information">PRINTER INFORMATION</string>
    <string name="test_printer">PRINTER TEST</string>
    <string name="creat_database_script">CREAT DATABASE SCRIPT</string>
    <string name="cancel">CANCEL</string>
    <string name="number_of_people">NUMBER OF PEOPLE</string>
    <string name="total">TOTAL</string>
    <string name="call_service">CALL SERVICE</string>
    <string name="payment">PAYMENT</string>
    <string name="list">LIST</string>
    <string name="icon">ICON</string>
    <string name="_continue">CONTINUE</string>
    <string name="order">ORDER</string>
    <string name="all">ALL</string>
    <string name="finish_order">FINISH</string>
    <string name="success">SUCCESS</string>
    <string name="connect_exception">UNABLE TO CONNECT TO THE SERVEUR</string>
    <string name="connect_fail">CONFIGURATION SETTING</string>
    <string name="warn_order">MEAL REST, CONTINUE ?</string>
    <string name="tape_password">ENTER PASSWARD</string>
    <string name="undelete">UNDELETE</string>
    <string name="logout">LOGOUT</string>
    <string name="wrong_password">PASSWORD INCORRECT</string>
    <string name="wrong_length">ENTRE PASSWORD WITH 6 LETTERS</string>
    <string name="match_error">PASSWORDS DO NOT MATCH</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="repeat_new_password">CONFIRM NEW PASSWORD</string>
    <string name="language">ENGLISH</string>
    <string name="select_pic">SELECT PICTURE</string>
    <string name="device_id">DEVICE ID</string>
    <string name="modify_logo">MODIFY LOGO</string>
    <string name="modify_floorview">MODIFY FLOOR MODE </string>
    <string name="map_mode">MAP MODE</string>
    <string name="list_mode">LIST MODE</string>
    <string name="turn">TOTAL TURN</string>
    <string name="add_table">ADD A TABLE</string>
    <string name="change_background">BACKGROUND</string>
    <string name="copy_right">ARCSOLU SARL.&#160;&#160;&#160;&#160;&#160;&#160;&#160;Copy right 2013&#160;&#160;&#160;&#160;&#160;&#160;&#160;(TEL: +33(0)1&#8211;48&#8211;11&#8211;95&#8211;59)</string>

</resources>